<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:font="@{`app_font`}"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/forpwd"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            app:font="@{`app_font`}"
            android:text="@string/forgotsubtitle"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/et_forget_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/email_stroke"
            app:font="@{`app_font`}"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/color_c1c1c1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                app:font="@{`app_font`}"
                android:onClick="@{clickListener::onClick}"
                android:background="@color/color_ffffff"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/color_c1c1c1" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                app:font="@{`app_font`}"
                android:onClick="@{clickListener::onClick}"
                android:background="@color/color_ffffff"
                android:text="@string/ok"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>

</layout>