<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_ffffff"
    android:orientation="vertical">

    <com.a2z.deliver.views.CustomTextview
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/selectlocation"
        android:textColor="@color/color_ffffff"
        android:textSize="@dimen/_15sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_camera_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_camera_picker" />

            <com.a2z.deliver.views.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:textColor="@color/color_000000" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="match_parent"
            android:background="@color/color_c1c1c1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_gallery_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_ffffff"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_gallery_picker" />

            <com.a2z.deliver.views.CustomTextview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                android:textColor="@color/color_000000" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>