<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_ffffff"
        android:orientation="vertical"
        tools:context=".activities.signUp.SignupActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_ffffff"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp">

                <include
                    android:id="@+id/signupHeader"
                    layout="@layout/header_layout" />

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/image_picker_signup"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_27sdp"
                android:onClick="@{clickListener::onClick}">

                <ImageView
                    android:id="@+id/iv_profilepic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_placeholder_image" />

                <TextView
                    android:id="@+id/tv_image_picker_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="@color/Black_transparent"
                    android:drawableLeft="@drawable/ic_cam_upload"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="@string/upload"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/progressbar_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    app:font="@{`app_font`}" />

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    app:font="@{`app_font`}" />

                <EditText
                    android:id="@+id/et_mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    app:font="@{`app_font`}" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                app:font="@{`app_font`}" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:font="@{`app_font`}" />

            <EditText
                android:id="@+id/et_confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/confpassword"
                android:inputType="textPassword"
                android:maxLines="1"
                app:font="@{`app_font`}" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:onClick="@{clickListener::onClick}"
                android:text="@string/Continue"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/color_ffffff"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:font="@{`app_font`}" />
        </RelativeLayout>
    </LinearLayout>
</layout>